; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/tegra/extr_ivc.c_tegra_ivc_flush_frame.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/tegra/extr_ivc.c_tegra_ivc_flush_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_ivc = type { i32, i32 }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_ivc*, i64, i32, i32, i64)* @tegra_ivc_flush_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_ivc_flush_frame(%struct.tegra_ivc* %0, i64 %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.tegra_ivc*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.tegra_ivc* %0, %struct.tegra_ivc** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %11 = load %struct.tegra_ivc*, %struct.tegra_ivc** %6, align 8
  %12 = getelementptr inbounds %struct.tegra_ivc, %struct.tegra_ivc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %5
  %16 = load i32, i32* %8, align 4
  %17 = load %struct.tegra_ivc*, %struct.tegra_ivc** %6, align 8
  %18 = getelementptr inbounds %struct.tegra_ivc, %struct.tegra_ivc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp uge i32 %16, %19
  %21 = zext i1 %20 to i32
  %22 = call i64 @WARN_ON(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %15, %5
  br label %40

25:                                               ; preds = %15
  %26 = load %struct.tegra_ivc*, %struct.tegra_ivc** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i64 @tegra_ivc_frame_phys(%struct.tegra_ivc* %26, i64 %27, i32 %28)
  %30 = load i32, i32* %9, align 4
  %31 = zext i32 %30 to i64
  %32 = add nsw i64 %29, %31
  store i64 %32, i64* %7, align 8
  %33 = load %struct.tegra_ivc*, %struct.tegra_ivc** %6, align 8
  %34 = getelementptr inbounds %struct.tegra_ivc, %struct.tegra_ivc* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load i64, i64* %7, align 8
  %37 = load i64, i64* %10, align 8
  %38 = load i32, i32* @DMA_TO_DEVICE, align 4
  %39 = call i32 @dma_sync_single_for_device(i32 %35, i64 %36, i64 %37, i32 %38)
  br label %40

40:                                               ; preds = %25, %24
  ret void
}

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i64 @tegra_ivc_frame_phys(%struct.tegra_ivc*, i64, i32) #1

declare dso_local i32 @dma_sync_single_for_device(i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
